--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="halp">
             <h1>Welcome to</h1>
             <h1><span class="name-highlight">Rakib</span> Website</h1>
             <h3>World-class professional web developer</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="link-button" target="_blanck" href="https://www.facebook.com/mdrakib.king.1">HIRE ME</a>
         </div>
         <div class="halp">
             <img src="rk.png" alt="">
