--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
             <a class="link-button" target="_blanck" href="https://www.facebook.com/mdrakib.king.1">HIRE ME</a>
         </div>
         <div class="halp">
-            <img src="rk.png" alt="">
+            <img src="mohitul.png" alt="">
+        </div>
+    </section>
+    <section class="dream-area">
+        <div class="halp-width">
+            <img src="rakib.png" alt="">
+        </div>
+        <div class="halp-width">
+
         </div>
     </section>
 </body>
