aded a top part

--- a/index.html
+++ b/index.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rakib Web Developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
-        <div class="halp">
-            <h1>Welcome to</h1>
+    <section>
+        <div class="halp-width">
+            <h1>Welcome To</h1>
             <h1><span class="name-highlight">Rakib</span> Website</h1>
-            <h3>World-class professional web developer</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-            <a class="link-button" target="_blanck" href="https://www.facebook.com/mdrakib.king.1">HIRE ME</a>
-        </div>
-        <div class="halp">
-            <img src="mohitul.png" alt="">
-        </div>
-    </section>
-    <section class="dream-area">
-        <div class="halp-width">
-            <img src="rakib.png" alt="">
+            <h3>World-class Professional Web Developer</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop  until I become the Web Development Hero.</p>
         </div>
         <div class="halp-width">
-
+            <img src="profile1.png" alt="">
         </div>
     </section>
 </body>
